--- a/_config.yml
+++ b/_config.yml
@@ -22,7 +22,7 @@ repository               : "academicpages/academicpages.github.io"
 author:
   # Biographic information
   avatar           : "lxy.png"
-  name             : "Xiaoyang Lu   (鲁潇阳)"
+  name             : "Xiaoyang Lu"
   pronouns         : "he/him"  
   bio              : "Ph.D. Candidate, Department of Computer Science, Illinois Institute of Technology"
   location         : "Chicago, IL"
