--- a/_config.yml
+++ b/_config.yml
@@ -111,7 +111,7 @@ atom_feed:
 
 
 # SEO Related
-google_site_verification :
+google-site-verification : "_DKEQpT5xpm8LoYHBch_-LKLIamlMSdqyQlxv3eGS_w"
 bing_site_verification   :
 alexa_site_verification  :
 yandex_site_verification :
