--- a/_config.yml
+++ b/_config.yml
@@ -11,7 +11,7 @@ locale                   : "en-US"
 title                    : "Xiaoyang Lu"
 title_separator          : "-"
 name                     : &name "Xiaoyang Lu"
-description              : &description "Ph.D. Candidate, Department of Computer Science, Illinois Institute of Technology"
+description              : &description "Research Assistant Professor, Department of Computer Science, Illinois Institute of Technology"
 url                      : https://xiaoyang-lu.github.io # the base hostname & protocol for your site e.g. "https://mmistakes.github.io"
 baseurl                  : "" # the subpath of your site, e.g. "/blog"
 repository               : "academicpages/academicpages.github.io"
