--- a/_config.yml
+++ b/_config.yml
@@ -24,7 +24,7 @@ author:
   avatar           : "lxy.png"
   name             : "Xiaoyang Lu"
   pronouns         : "he/him"  
-  bio              : "Ph.D. Candidate, Department of Computer Science, Illinois Institute of Technology"
+  bio              : "Research Assistant Professor, Department of Computer Science, Illinois Institute of Technology"
   location         : "Chicago, IL"
   employer         : 
   uri              : 
