--- a/_config.yml
+++ b/_config.yml
@@ -28,7 +28,7 @@ author:
   location         : "Chicago, IL"
   employer         : 
   uri              : 
-  email            : "xlu40@hawk.iit.edu" 
+  email            : "xlu40@iit.edu" 
 
   # Academic websites
   arxiv            : # URL - Update with the correct link to your profile
