--- a/_config.yml
+++ b/_config.yml
@@ -3,7 +3,7 @@
 # This config file is meant for settings that affect your entire site, values
 # which you are expected to set up once and rarely need to edit after that.
 # For technical reasons, this file is *NOT* reloaded automatically when you use
-# `jekyll serve -l -H localhost`. If you change this file, please restart the 
+# `jekyll serve -l -H localhost`. If you change this file, please restart the
 # server process.
 
 # Basic Site Settings
@@ -23,12 +23,12 @@ author:
   # Biographic information
   avatar           : "lxy.png"
   name             : "Xiaoyang Lu"
-  pronouns         : "he/him"  
+  pronouns         : "he/him"
   bio              : "Ph.D, Research Assistant Professor, Department of Computer Science, Illinois Institute of Technology"
   location         : "Chicago, IL"
-  employer         : 
-  uri              : 
-  email            : "xlu40@iit.edu" 
+  employer         :
+  uri              :
+  email            : "xlu40@illinoistech.edu" 
 
   # Academic websites
   arxiv            : # URL - Update with the correct link to your profile
@@ -43,8 +43,8 @@ author:
   codepen          : # Username
   dribbble         : # Username
   github           : "Xiaoyang-Lu"
-  kaggle           : # Username  
-  stackoverflow    : # User number or user number and name (i.e., use "1" or "1/jeff-atwood")    
+  kaggle           : # Username
+  stackoverflow    : # User number or user number and name (i.e., use "1" or "1/jeff-atwood")
 
   # Social media
   bluesky          : # "bsky.app" # Replace this with you Bluesky username
@@ -111,7 +111,7 @@ atom_feed:
 
 
 # SEO Related
-google_site_verification : 
+google_site_verification :
 bing_site_verification   :
 alexa_site_verification  :
 yandex_site_verification :
